reference/5.1/Microsoft.PowerShell.Utility/Import-Csv.md
---
external help file: Microsoft.PowerShell.Commands.Utility.dll-Help.xml
keywords: powershell,コマンドレット
Locale: en-US
Module Name: Microsoft.PowerShell.Utility
ms.date: 04/23/2019
online version: https://docs.microsoft.com/powershell/module/microsoft.powershell.utility/import-csv?view=powershell-5.1&WT.mc_id=ps-gethelp
schema: 2.0.0
title: Import-Csv
ms.openlocfilehash: 6d060e0325ba10391f04348178f28b2793fe37fe
ms.sourcegitcommit: 9b28fb9a3d72655bb63f62af18b3a5af6a05cd3f
ms.translationtype: MT
ms.contentlocale: ja-JP
ms.lasthandoff: 07/07/2020
ms.locfileid: "93213883"
---
# <span data-ttu-id="f0353-103">Import-Csv</span><span class="sxs-lookup"><span data-stu-id="f0353-103">Import-Csv</span></span>

## <span data-ttu-id="f0353-104">概要</span><span class="sxs-lookup"><span data-stu-id="f0353-104">SYNOPSIS</span></span>
<span data-ttu-id="f0353-105">コンマ区切り値 (CSV) ファイルの項目から、テーブルに似たカスタムオブジェクトを作成します。</span><span class="sxs-lookup"><span data-stu-id="f0353-105">Creates table-like custom objects from the items in a comma-separated value (CSV) file.</span></span>

## <span data-ttu-id="f0353-106">SYNTAX</span><span class="sxs-lookup"><span data-stu-id="f0353-106">SYNTAX</span></span>

### <span data-ttu-id="f0353-107">区切り記号 (既定値)</span><span class="sxs-lookup"><span data-stu-id="f0353-107">Delimiter (Default)</span></span>

```
Import-Csv [[-Path] <string[]>] [[-Delimiter] <char>] [-LiteralPath <string[]>] [-Header <string[]>]
 [-Encoding <string>] [<CommonParameters>]
```

### <span data-ttu-id="f0353-108">UseCulture</span><span class="sxs-lookup"><span data-stu-id="f0353-108">UseCulture</span></span>

```
Import-Csv [[-Path] <string[]>] -UseCulture [-LiteralPath <string[]>] [-Header <string[]>]
 [-Encoding <string>] [<CommonParameters>]
```

## <span data-ttu-id="f0353-109">Description</span><span class="sxs-lookup"><span data-stu-id="f0353-109">DESCRIPTION</span></span>

<span data-ttu-id="f0353-110">`Import-Csv`コマンドレットでは、CSV ファイルの項目からテーブルに似たカスタムオブジェクトを作成します。</span><span class="sxs-lookup"><span data-stu-id="f0353-110">The `Import-Csv` cmdlet creates table-like custom objects from the items in CSV files.</span></span> <span data-ttu-id="f0353-111">CSV ファイルの各列がカスタムオブジェクトのプロパティになり、行の項目がプロパティ値になります。</span><span class="sxs-lookup"><span data-stu-id="f0353-111">Each column in the CSV file becomes a property of the custom object and the items in rows become the property values.</span></span> <span data-ttu-id="f0353-112">`Import-Csv` コマンドレットによって生成されたファイルを含む、任意の CSV ファイルで動作 `Export-Csv` します。</span><span class="sxs-lookup"><span data-stu-id="f0353-112">`Import-Csv` works on any CSV file, including files that are generated by the `Export-Csv` cmdlet.</span></span>

<span data-ttu-id="f0353-113">コマンドレットのパラメーターを使用して、 `Import-Csv` 列ヘッダー行と項目区切り記号を指定したり、 `Import-Csv` 現在のカルチャの区切り記号を項目の区切り記号として使用するように指定したりできます。</span><span class="sxs-lookup"><span data-stu-id="f0353-113">You can use the parameters of the `Import-Csv` cmdlet to specify the column header row and the item delimiter, or direct `Import-Csv` to use the list separator for the current culture as the item delimiter.</span></span>

<span data-ttu-id="f0353-114">また、 `ConvertTo-Csv` `ConvertFrom-Csv` コマンドレットとコマンドレットを使用して、オブジェクトを CSV 文字列 (およびその逆) に変換することもできます。</span><span class="sxs-lookup"><span data-stu-id="f0353-114">You can also use the `ConvertTo-Csv` and `ConvertFrom-Csv` cmdlets to convert objects to CSV strings (and back).</span></span> <span data-ttu-id="f0353-115">これらのコマンドレットは、およびコマンドレットと同じですが、 `Export-CSV` `Import-Csv` ファイルを処理しない点が異なります。</span><span class="sxs-lookup"><span data-stu-id="f0353-115">These cmdlets are the same as the `Export-CSV` and `Import-Csv` cmdlets, except that they do not deal with files.</span></span>

<span data-ttu-id="f0353-116">CSV ファイルのヘッダー行エントリに空の値または null 値が含まれている場合は、PowerShell によって既定のヘッダー行の名前が挿入され、警告メッセージが表示されます。</span><span class="sxs-lookup"><span data-stu-id="f0353-116">If a header row entry in a CSV file contains an empty or null value, PowerShell inserts a default header row name and displays a warning message.</span></span>

<span data-ttu-id="f0353-117">`Import-Csv` バイト順マーク (BOM) を使用して、ファイルのエンコード形式を検出します。</span><span class="sxs-lookup"><span data-stu-id="f0353-117">`Import-Csv` uses the byte-order-mark (BOM) to detect the encoding format of the file.</span></span> <span data-ttu-id="f0353-118">ファイルに BOM がない場合は、エンコードが UTF8 であると想定されます。</span><span class="sxs-lookup"><span data-stu-id="f0353-118">If the file has no BOM, it assumes the encoding is UTF8.</span></span>

## <span data-ttu-id="f0353-119">例</span><span class="sxs-lookup"><span data-stu-id="f0353-119">EXAMPLES</span></span>

### <span data-ttu-id="f0353-120">例 1: プロセスオブジェクトをインポートする</span><span class="sxs-lookup"><span data-stu-id="f0353-120">Example 1: Import process objects</span></span>

<span data-ttu-id="f0353-121">この例では、プロセスオブジェクトの CSV ファイルをエクスポートしてインポートする方法を示します。</span><span class="sxs-lookup"><span data-stu-id="f0353-121">This example shows how to export and then import a CSV file of process objects.</span></span>

```powershell
Get-Process | Export-Csv -Path .\Processes.csv
$P = Import-Csv -Path .\Processes.csv
$P | Get-Member
```

```Output
   TypeName: System.Management.Automation.PSCustomObject

Name                       MemberType   Definition
----                       ----------   ----------
Equals                     Method       bool Equals(System.Object obj)
GetHashCode                Method       int GetHashCode()
GetType                    Method       type GetType()
ToString                   Method       string ToString()
BasePriority               NoteProperty string BasePriority=8
Company                    NoteProperty string Company=Microsoft Corporation
...
```

```powershell
$P | Format-Table
```

```Output
Name                   SI Handles VM            WS        PM        NPM    Path
----                   -- ------- --            --        --        ---    ----
ApplicationFrameHost   4  407     2199293489152 15884288  15151104  23792  C:\WINDOWS\system32\ApplicationFrameHost.exe
...
wininit                0  157     2199112204288 4591616   1630208   10376
winlogon               4  233     2199125549056 7659520   2826240   10992  C:\WINDOWS\System32\WinLogon.exe
WinStore.App           4  846     873435136     33652736  26607616  55432  C:\Program Files\WindowsApps\Microsoft.WindowsStore_11712.1001.13.0_x64__8weky...
WmiPrvSE               0  201     2199100219392 8830976   3297280   10632  C:\WINDOWS\system32\wbem\wmiprvse.exe
WmiPrvSE               0  407     2199157727232 18509824  12922880  16624  C:\WINDOWS\system32\wbem\wmiprvse.exe
WUDFHost               0  834     2199310204928 51945472  87441408  24984  C:\Windows\System32\WUDFHost.exe
```

<span data-ttu-id="f0353-122">`Get-Process`コマンドレットは、プロセスオブジェクトをパイプラインからに送信し `Export-Csv` ます。</span><span class="sxs-lookup"><span data-stu-id="f0353-122">The `Get-Process` cmdlet sends process objects down the pipeline to the `Export-Csv`.</span></span> <span data-ttu-id="f0353-123">`Export-Csv`コマンドレットは、プロセスオブジェクトを CSV 文字列に変換し、その文字列を Processes.csv ファイルに保存します。</span><span class="sxs-lookup"><span data-stu-id="f0353-123">The `Export-Csv` cmdlet converts the process objects to CSV strings and saves the strings in the Processes.csv file.</span></span> <span data-ttu-id="f0353-124">`Import-Csv`コマンドレットは、Processes.csv ファイルから CSV 文字列をインポートします。</span><span class="sxs-lookup"><span data-stu-id="f0353-124">The `Import-Csv` cmdlet imports the CSV strings from the Processes.csv file.</span></span>
<span data-ttu-id="f0353-125">文字列は変数に保存され `$P` ます。</span><span class="sxs-lookup"><span data-stu-id="f0353-125">The strings are saved in the `$P` variable.</span></span> <span data-ttu-id="f0353-126">変数は、インポートされた `$P` `Get-Member` CSV 文字列のプロパティを表示するコマンドレットにパイプラインから送信されます。</span><span class="sxs-lookup"><span data-stu-id="f0353-126">The `$P` variable is sent down the pipeline to the `Get-Member` cmdlet that displays the properties of the imported CSV strings.</span></span> <span data-ttu-id="f0353-127">`$P`変数はパイプラインの下にコマンドレットに送信され `Format-Table` 、オブジェクトが表示されます。</span><span class="sxs-lookup"><span data-stu-id="f0353-127">The `$P` variable is sent down the pipeline to the `Format-Table` cmdlet and displays the objects.</span></span>

### <span data-ttu-id="f0353-128">例 2: 区切り記号を指定する</span><span class="sxs-lookup"><span data-stu-id="f0353-128">Example 2: Specify the delimiter</span></span>

<span data-ttu-id="f0353-129">この例では、コマンドレットの **Delimiter** パラメーターを使用する方法を示し `Import-Csv` ます。</span><span class="sxs-lookup"><span data-stu-id="f0353-129">This example shows how to use the **Delimiter** parameter of the `Import-Csv` cmdlet.</span></span>

```powershell
Get-Process | Export-Csv -Path .\Processes.csv -Delimiter :
$P = Import-Csv -Path .\Processes.csv -Delimiter :
$P | Format-Table
```

<span data-ttu-id="f0353-130">`Get-Process`コマンドレットは、パイプラインのプロセスオブジェクトをに送信し `Export-Csv` ます。</span><span class="sxs-lookup"><span data-stu-id="f0353-130">The `Get-Process` cmdlet sends process objects down the pipeline to `Export-Csv`.</span></span> <span data-ttu-id="f0353-131">`Export-Csv`コマンドレットは、プロセスオブジェクトを CSV 文字列に変換し、その文字列を Processes.csv ファイルに保存します。</span><span class="sxs-lookup"><span data-stu-id="f0353-131">The `Export-Csv` cmdlet converts the process objects to CSV strings and saves the strings in the Processes.csv file.</span></span>
<span data-ttu-id="f0353-132">**Delimiter** パラメーターは、コロン区切り記号を指定するために使用されます。</span><span class="sxs-lookup"><span data-stu-id="f0353-132">The **Delimiter** parameter is used to specify a colon delimiter.</span></span> <span data-ttu-id="f0353-133">`Import-Csv`コマンドレットは、Processes.csv ファイルから CSV 文字列をインポートします。</span><span class="sxs-lookup"><span data-stu-id="f0353-133">The `Import-Csv` cmdlet imports the CSV strings from the Processes.csv file.</span></span> <span data-ttu-id="f0353-134">文字列は変数に保存され `$P` ます。</span><span class="sxs-lookup"><span data-stu-id="f0353-134">The strings are saved in the `$P` variable.</span></span> <span data-ttu-id="f0353-135">To `$P` 変数は、パイプラインを介してコマンドレットに送信され `Format-Table` ます。</span><span class="sxs-lookup"><span data-stu-id="f0353-135">To `$P` variable is sent down the pipeline to the `Format-Table` cmdlet.</span></span>

### <span data-ttu-id="f0353-136">例 3: 区切り記号の現在のカルチャを指定する</span><span class="sxs-lookup"><span data-stu-id="f0353-136">Example 3: Specify the current culture for the delimiter</span></span>

<span data-ttu-id="f0353-137">この例では、UseCulture パラメーターを指定してコマンドレットを使用する方法を示し `Import-Csv` ます。 **UseCulture**</span><span class="sxs-lookup"><span data-stu-id="f0353-137">This example shows how to use the `Import-Csv` cmdlet with the **UseCulture** parameter.</span></span>

```powershell
(Get-Culture).TextInfo.ListSeparator
Get-Process | Export-Csv -Path .\Processes.csv -UseCulture
Import-Csv -Path .\Processes.csv -UseCulture
```

<span data-ttu-id="f0353-138">この `Get-Culture` コマンドレットは、入れ子になったプロパティの **TextInfo** と **listseparator** を使用して、現在のカルチャの既定のリスト区切り記号を取得します。</span><span class="sxs-lookup"><span data-stu-id="f0353-138">The `Get-Culture` cmdlet uses the nested properties **TextInfo** and **ListSeparator** to get the current culture's default list separator.</span></span> <span data-ttu-id="f0353-139">`Get-Process`コマンドレットは、パイプラインのプロセスオブジェクトをに送信し `Export-Csv` ます。</span><span class="sxs-lookup"><span data-stu-id="f0353-139">The `Get-Process` cmdlet sends process objects down the pipeline to `Export-Csv`.</span></span> <span data-ttu-id="f0353-140">`Export-Csv`コマンドレットは、プロセスオブジェクトを CSV 文字列に変換し、その文字列を Processes.csv ファイルに保存します。</span><span class="sxs-lookup"><span data-stu-id="f0353-140">The `Export-Csv` cmdlet converts the process objects to CSV strings and saves the strings in the Processes.csv file.</span></span> <span data-ttu-id="f0353-141">**UseCulture** パラメーターは、現在のカルチャの既定のリスト区切り記号を使用します。</span><span class="sxs-lookup"><span data-stu-id="f0353-141">The **UseCulture** parameter uses the current culture's default list separator.</span></span> <span data-ttu-id="f0353-142">`Import-Csv`コマンドレットは、Processes.csv ファイルから CSV 文字列をインポートします。</span><span class="sxs-lookup"><span data-stu-id="f0353-142">The `Import-Csv` cmdlet imports the CSV strings from the Processes.csv file.</span></span>

### <span data-ttu-id="f0353-143">例 4: インポートされたオブジェクトのプロパティ名を変更する</span><span class="sxs-lookup"><span data-stu-id="f0353-143">Example 4: Change property names in an imported object</span></span>

<span data-ttu-id="f0353-144">この例では、の **Header** パラメーターを使用して `Import-Csv` 、結果としてインポートされるオブジェクトのプロパティの名前を変更する方法を示します。</span><span class="sxs-lookup"><span data-stu-id="f0353-144">This example shows how to use the **Header** parameter of `Import-Csv` to change the names of properties in the resulting imported object.</span></span>

```powershell
Start-Job -ScriptBlock { Get-Process } | Export-Csv -Path .\Jobs.csv -NoTypeInformation
$Header = 'State', 'MoreData', 'StatusMessage', 'Location', 'Command', 'StateInfo', 'Finished',
  'InstanceId', 'Id', 'Name', 'ChildJobs', 'BeginTime', 'EndTime', 'JobType', 'Output', 'Error',
  'Progress', 'Verbose', 'Debug', 'Warning', 'Information'
# Delete the default header from file
$A = Get-Content -Path .\Jobs.csv
$A = $A[1..($A.Count - 1)]
$A | Out-File -FilePath .\Jobs.csv
$J = Import-Csv -Path .\Jobs.csv -Header $Header
$J
```

```Output
State         : Running
MoreData      : True
StatusMessage :
Location      : localhost
Command       : Get-Process
StateInfo     : Running
Finished      : System.Threading.ManualResetEvent
InstanceId    : a259eb63-6824-4b97-a033-305108ae1c2e
Id            : 1
Name          : Job1
ChildJobs     : System.Collections.Generic.List`1[System.Management.Automation.Job]
BeginTime     : 12/20/2018 18:59:57
EndTime       :
JobType       : BackgroundJob
Output        : System.Management.Automation.PSDataCollection`1[System.Management.Automation.PSObject]
Error         : System.Management.Automation.PSDataCollection`1[System.Management.Automation.ErrorRecord]
Progress      : System.Management.Automation.PSDataCollection`1[System.Management.Automation.ProgressRecord]
Verbose       : System.Management.Automation.PSDataCollection`1[System.Management.Automation.VerboseRecord]
Debug         : System.Management.Automation.PSDataCollection`1[System.Management.Automation.DebugRecord]
Warning       : System.Management.Automation.PSDataCollection`1[System.Management.Automation.WarningRecord]
Information   : System.Management.Automation.PSDataCollection`1[System.Management.Automation.InformationRecord]
```

<span data-ttu-id="f0353-145">コマンドレットでは、 `Start-Job` 実行するバックグラウンドジョブを開始し `Get-Process` ます。</span><span class="sxs-lookup"><span data-stu-id="f0353-145">The `Start-Job` cmdlet starts a background job that runs `Get-Process`.</span></span> <span data-ttu-id="f0353-146">ジョブオブジェクトは、パイプラインからコマンドレットに送信され、 `Export-Csv` CSV 文字列に変換されます。</span><span class="sxs-lookup"><span data-stu-id="f0353-146">A job object is sent down the pipeline to the `Export-Csv` cmdlet and converted to a CSV string.</span></span> <span data-ttu-id="f0353-147">**Notypeinformation** パラメーターは、CSV 出力から型情報ヘッダーを削除し、PowerShell Core では省略可能です。</span><span class="sxs-lookup"><span data-stu-id="f0353-147">The **NoTypeInformation** parameter removes the type information header from CSV output and is optional in PowerShell Core.</span></span>
<span data-ttu-id="f0353-148">変数には、 `$Header` **HasPSJobTypeName data** 、 **jobstateinfo** 、 **Psbegintime** 、 **psendtime** 、および **PSJobTypeName** の既定値を置き換えるカスタムヘッダーが含まれています。</span><span class="sxs-lookup"><span data-stu-id="f0353-148">The `$Header` variable contains a custom header that replaces the following default values: **HasMoreData** , **JobStateInfo** , **PSBeginTime** , **PSEndTime** , and **PSJobTypeName** .</span></span> <span data-ttu-id="f0353-149">変数は、コマンドレットを使用して、 `$A` `Get-Content` Jobs.csv ファイルから CSV 文字列を取得します。</span><span class="sxs-lookup"><span data-stu-id="f0353-149">The `$A` variable uses the `Get-Content` cmdlet to get the CSV string from the Jobs.csv file.</span></span> <span data-ttu-id="f0353-150">変数は、 `$A` ファイルから既定のヘッダーを削除するために使用されます。</span><span class="sxs-lookup"><span data-stu-id="f0353-150">The `$A` variable is used to remove the default header from the file.</span></span> <span data-ttu-id="f0353-151">この `Out-File` コマンドレットは、新しいバージョンの Jobs.csv ファイルを変数に保存し `$A` ます。</span><span class="sxs-lookup"><span data-stu-id="f0353-151">The `Out-File` cmdlet saves the new version of the Jobs.csv file in the `$A` variable.</span></span> <span data-ttu-id="f0353-152">`Import-Csv`コマンドレットは、Jobs.csv ファイルをインポートし、 **Header** パラメーターを使用して変数を適用し `$Header` ます。</span><span class="sxs-lookup"><span data-stu-id="f0353-152">The `Import-Csv` cmdlet imports the Jobs.csv file and uses the **Header** parameter to apply the `$Header` variable.</span></span> <span data-ttu-id="f0353-153">変数には、インポートされた `$J` **Pscustomobject** 変数が含まれ、PowerShell コンソールにオブジェクトが表示されます。</span><span class="sxs-lookup"><span data-stu-id="f0353-153">The `$J` variable contains the imported **PSCustomObject** and displays the object in the PowerShell console.</span></span>

### <span data-ttu-id="f0353-154">例 5: CSV ファイルを使用してカスタムオブジェクトを作成する</span><span class="sxs-lookup"><span data-stu-id="f0353-154">Example 5: Create a custom object using a CSV file</span></span>

<span data-ttu-id="f0353-155">この例では、CSV ファイルを使用して PowerShell でカスタムオブジェクトを作成する方法を示します。</span><span class="sxs-lookup"><span data-stu-id="f0353-155">This example shows how to create a custom object in PowerShell by using a CSV file.</span></span>

```powershell
Get-Content -Path .\Links.csv
```

```Output
113207,about_Aliases
113208,about_Arithmetic_Operators
113209,about_Arrays
113210,about_Assignment_Operators
113212,about_Automatic_Variables
113213,about_Break
113214,about_Command_Precedence
113215,about_Command_Syntax
144309,about_Comment_Based_Help
113216,about_CommonParameters
113217,about_Comparison_Operators
113218,about_Continue
113219,about_Core_Commands
113220,about_Data_Section
```

```powershell
$A = Import-Csv -Path .\Links.csv -Header 'LinkID', 'TopicTitle'
$A | Get-Member
```

```Output
   TypeName: System.Management.Automation.PSCustomObject

Name        MemberType   Definition
----        ----------   ----------
Equals      Method       bool Equals(System.Object obj)
GetHashCode Method       int GetHashCode()
GetType     Method       type GetType()
ToString    Method       string ToString()
LinkID      NoteProperty string LinkID=113207
TopicTitle  NoteProperty string TopicTitle=about_Aliases
```

```powershell
$A | Where-Object -Property TopicTitle -Like '*alias*'
```

```Output
LinkID TopicTitle
------ ----------
113207 about_Aliases
```

<span data-ttu-id="f0353-156">Links.csv ファイルを作成するには、出力に示されている値を使用し `Get-Content` ます。</span><span class="sxs-lookup"><span data-stu-id="f0353-156">To create your Links.csv file, use the values shown in the `Get-Content` output.</span></span>

<span data-ttu-id="f0353-157">コマンドレットにより、 `Get-Content` Links.csv ファイルが表示されます。</span><span class="sxs-lookup"><span data-stu-id="f0353-157">The `Get-Content` cmdlet displays the Links.csv file.</span></span> <span data-ttu-id="f0353-158">この `Import-Csv` コマンドレットは、Links.csv ファイルをインポートします。</span><span class="sxs-lookup"><span data-stu-id="f0353-158">The `Import-Csv` cmdlet imports the Links.csv file.</span></span> <span data-ttu-id="f0353-159">**Header** パラメーターは、 **LinkId** と **トピックタイトル** のプロパティ名を指定します。</span><span class="sxs-lookup"><span data-stu-id="f0353-159">The **Header** parameter specifies the property names **LinkId** and **TopicTitle** .</span></span> <span data-ttu-id="f0353-160">オブジェクトは変数に格納され `$A` ます。</span><span class="sxs-lookup"><span data-stu-id="f0353-160">The objects are stored in the `$A` variable.</span></span> <span data-ttu-id="f0353-161">`Get-Member`コマンドレットは、 **ヘッダー** パラメーターのプロパティ名を表示します。</span><span class="sxs-lookup"><span data-stu-id="f0353-161">The `Get-Member` cmdlet shows the property names from the **Header** parameter.</span></span> <span data-ttu-id="f0353-162">コマンドレットでは、 `Where-Object` **エイリアス** を含む " **トピックのタイトル** " プロパティを使用してオブジェクトを選択します。</span><span class="sxs-lookup"><span data-stu-id="f0353-162">The `Where-Object` cmdlet selects objects with the **TopicTitle** property that includes **alias** .</span></span>

### <span data-ttu-id="f0353-163">例 6: 値が不足している CSV をインポートする</span><span class="sxs-lookup"><span data-stu-id="f0353-163">Example 6: Import a CSV that is missing a value</span></span>

<span data-ttu-id="f0353-164">この例は、 `Import-Csv` CSV ファイルのヘッダー行に null 値または空の値が含まれている場合に、PowerShell のコマンドレットがどのように応答するかを示しています。</span><span class="sxs-lookup"><span data-stu-id="f0353-164">This example shows how the `Import-Csv` cmdlet in PowerShell responds when the header row in a CSV file includes a null or empty value.</span></span> <span data-ttu-id="f0353-165">`Import-Csv` が返すオブジェクトのプロパティ名になる、欠落しているヘッダー行の既定の名前に置き換え `Import-Csv` ます。</span><span class="sxs-lookup"><span data-stu-id="f0353-165">`Import-Csv` substitutes a default name for the missing header row that becomes the property name of the object that `Import-Csv` returns.</span></span>

```powershell
Get-Content -Path .\Projects.csv
```

```Output
ProjectID,ProjectName,,Completed
13,Inventory,Redmond,True
440,,FarEast,True
469,Marketing,Europe,False
```

```powershell
Import-Csv -Path .\Projects.csv
```

```Output
WARNING: One or more headers were not specified. Default names starting with "H" have been used in place of any missing headers.

ProjectID ProjectName H1      Completed
--------- ----------- --      ---------
13        Inventory   Redmond True
440                   FarEast True
469       Marketing   Europe  False
```

```powershell
(Import-Csv -Path .\Projects.csv).H1
```

```Output
WARNING: One or more headers were not specified. Default names starting with "H" have been used in place of any missing headers.
Redmond
FarEast
Europe
```

<span data-ttu-id="f0353-166">Projects.csv ファイルを作成するには、例の出力に示されている値を使用し `Get-Content` ます。</span><span class="sxs-lookup"><span data-stu-id="f0353-166">To create your Projects.csv file, use the values shown in the example's `Get-Content` output.</span></span>

<span data-ttu-id="f0353-167">コマンドレットにより、 `Get-Content` Projects.csv ファイルが表示されます。</span><span class="sxs-lookup"><span data-stu-id="f0353-167">The `Get-Content` cmdlet displays the Projects.csv file.</span></span> <span data-ttu-id="f0353-168">ヘッダー行の **ProjectName** と **Completed** の間に値がありません。</span><span class="sxs-lookup"><span data-stu-id="f0353-168">The header row is missing a value between **ProjectName** and **Completed** .</span></span> <span data-ttu-id="f0353-169">この `Import-Csv` コマンドレットは、Projects.csv ファイルをインポートし、 **H1** が既定のヘッダー名であるため、警告メッセージを表示します。</span><span class="sxs-lookup"><span data-stu-id="f0353-169">The `Import-Csv` cmdlet imports the Projects.csv file and displays a warning message because **H1** is a default header name.</span></span> <span data-ttu-id="f0353-170">この `(Import-Csv -Path
.\Projects.csv).H1` コマンドは、 **H1** プロパティ値を取得し、警告を表示します。</span><span class="sxs-lookup"><span data-stu-id="f0353-170">The `(Import-Csv -Path
.\Projects.csv).H1` command gets the **H1** property values and displays a warning.</span></span>

## <span data-ttu-id="f0353-171">PARAMETERS</span><span class="sxs-lookup"><span data-stu-id="f0353-171">PARAMETERS</span></span>

### <span data-ttu-id="f0353-172">-区切り記号</span><span class="sxs-lookup"><span data-stu-id="f0353-172">-Delimiter</span></span>

<span data-ttu-id="f0353-173">CSV ファイル内のプロパティ値を区切る区切り記号を指定します。</span><span class="sxs-lookup"><span data-stu-id="f0353-173">Specifies the delimiter that separates the property values in the CSV file.</span></span>
<span data-ttu-id="f0353-174">既定値はコンマ (,) です。</span><span class="sxs-lookup"><span data-stu-id="f0353-174">The default is a comma (,).</span></span>

<span data-ttu-id="f0353-175">コロン (:) などの文字を入力します。</span><span class="sxs-lookup"><span data-stu-id="f0353-175">Enter a character, such as a colon (:).</span></span>
<span data-ttu-id="f0353-176">セミコロン (;) を指定するには単一引用符で囲みます。</span><span class="sxs-lookup"><span data-stu-id="f0353-176">To specify a semicolon (;) enclose it in single quotation marks.</span></span>

<span data-ttu-id="f0353-177">ファイルに実際の文字列区切り記号以外の文字を指定すると、は `Import-Csv` csv 文字列からオブジェクトを作成できず、csv 文字列が返されます。</span><span class="sxs-lookup"><span data-stu-id="f0353-177">If you specify a character other than the actual string delimiter in the file, `Import-Csv` cannot create the objects from the CSV strings and will return the CSV strings.</span></span>

```yaml
Type: System.Char
Parameter Sets: Delimiter
Aliases:

Required: False
Position: 1
Default value: comma (,)
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="f0353-178">-Encoding</span><span class="sxs-lookup"><span data-stu-id="f0353-178">-Encoding</span></span>

<span data-ttu-id="f0353-179">ターゲット ファイルのエンコードの種類を指定します。</span><span class="sxs-lookup"><span data-stu-id="f0353-179">Specifies the type of encoding for the target file.</span></span> <span data-ttu-id="f0353-180">既定値は `Default` です。</span><span class="sxs-lookup"><span data-stu-id="f0353-180">The default value is `Default`.</span></span>

<span data-ttu-id="f0353-181">このパラメーターに指定できる値は次のとおりです。</span><span class="sxs-lookup"><span data-stu-id="f0353-181">The acceptable values for this parameter are as follows:</span></span>

- <span data-ttu-id="f0353-182">`ASCII` ASCII (7 ビット) 文字セットを使用します。</span><span class="sxs-lookup"><span data-stu-id="f0353-182">`ASCII` Uses ASCII (7-bit) character set.</span></span>
- <span data-ttu-id="f0353-183">`BigEndianUnicode` は、ビッグエンディアンのバイト順で UTF-16 を使用します。</span><span class="sxs-lookup"><span data-stu-id="f0353-183">`BigEndianUnicode` Uses UTF-16 with the big-endian byte order.</span></span>
- <span data-ttu-id="f0353-184">`Default` は、システムのアクティブなコードページ (通常は ANSI) に対応するエンコーディングを使用します。</span><span class="sxs-lookup"><span data-stu-id="f0353-184">`Default` Uses the encoding that corresponds to the system's active code page (usually ANSI).</span></span>
- <span data-ttu-id="f0353-185">`OEM` は、システムの現在の OEM コードページに対応するエンコーディングを使用します。</span><span class="sxs-lookup"><span data-stu-id="f0353-185">`OEM` Uses the encoding that corresponds to the system's current OEM code page.</span></span>
- <span data-ttu-id="f0353-186">`Unicode` は、リトルエンディアンのバイト順で UTF-16 を使用します。</span><span class="sxs-lookup"><span data-stu-id="f0353-186">`Unicode` Uses UTF-16 with the little-endian byte order.</span></span>
- <span data-ttu-id="f0353-187">`UTF7` UTF-7 を使用します。</span><span class="sxs-lookup"><span data-stu-id="f0353-187">`UTF7` Uses UTF-7.</span></span>
- <span data-ttu-id="f0353-188">`UTF8` UTF-8 を使用します。</span><span class="sxs-lookup"><span data-stu-id="f0353-188">`UTF8` Uses UTF-8.</span></span>
- <span data-ttu-id="f0353-189">`UTF32` は、リトルエンディアンのバイト順で 32 UTF-8 を使用します。</span><span class="sxs-lookup"><span data-stu-id="f0353-189">`UTF32` Uses UTF-32 with the little-endian byte order.</span></span>

```yaml
Type: System.String
Parameter Sets: (All)
Aliases:
Accepted values: ASCII, BigEndianUnicode, Default, OEM, Unicode, UTF7, UTF8, UTF32

Required: False
Position: Named
Default value: Default
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="f0353-190">-ヘッダー</span><span class="sxs-lookup"><span data-stu-id="f0353-190">-Header</span></span>

<span data-ttu-id="f0353-191">インポートされたファイルの代替列ヘッダー行を指定します。</span><span class="sxs-lookup"><span data-stu-id="f0353-191">Specifies an alternate column header row for the imported file.</span></span> <span data-ttu-id="f0353-192">列ヘッダーは、によって作成されるオブジェクトのプロパティ名を決定し `Import-Csv` ます。</span><span class="sxs-lookup"><span data-stu-id="f0353-192">The column header determines the property names of the objects created by `Import-Csv`.</span></span>

<span data-ttu-id="f0353-193">列ヘッダーをコンマ区切りのリストとして入力します。</span><span class="sxs-lookup"><span data-stu-id="f0353-193">Enter column headers as a comma-separated list.</span></span> <span data-ttu-id="f0353-194">ヘッダー文字列は引用符で囲まないでください。</span><span class="sxs-lookup"><span data-stu-id="f0353-194">Do not enclose the header string in quotation marks.</span></span> <span data-ttu-id="f0353-195">各列ヘッダーを単一引用符で囲みます。</span><span class="sxs-lookup"><span data-stu-id="f0353-195">Enclose each column header in single quotation marks.</span></span>

<span data-ttu-id="f0353-196">入力した列ヘッダーの数がデータ列の数を下回る場合は、残りのデータ列は破棄されます。</span><span class="sxs-lookup"><span data-stu-id="f0353-196">If you enter fewer column headers than there are data columns, the remaining data columns are discarded.</span></span> <span data-ttu-id="f0353-197">データ列よりも多くの列ヘッダーを入力すると、追加の列ヘッダーが空のデータ列で作成されます。</span><span class="sxs-lookup"><span data-stu-id="f0353-197">If you enter more column headers than there are data columns, the additional column headers are created with empty data columns.</span></span>

<span data-ttu-id="f0353-198">**Header** パラメーターを使用する場合は、CSV ファイルから元のヘッダー行を削除します。</span><span class="sxs-lookup"><span data-stu-id="f0353-198">When using the **Header** parameter, delete the original header row from the CSV file.</span></span> <span data-ttu-id="f0353-199">それ以外の場合は、 `Import-Csv` ヘッダー行の項目から余分なオブジェクトを作成します。</span><span class="sxs-lookup"><span data-stu-id="f0353-199">Otherwise, `Import-Csv` creates an extra object from the items in the header row.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="f0353-200">-LiteralPath</span><span class="sxs-lookup"><span data-stu-id="f0353-200">-LiteralPath</span></span>

<span data-ttu-id="f0353-201">インポートする CSV ファイルのパスを指定します。</span><span class="sxs-lookup"><span data-stu-id="f0353-201">Specifies the path to the CSV file to import.</span></span> <span data-ttu-id="f0353-202">**Path** と異なり、 **LiteralPath** パラメーターの値は入力したとおりに使用されます。</span><span class="sxs-lookup"><span data-stu-id="f0353-202">Unlike **Path** , the value of the **LiteralPath** parameter is used exactly as it is typed.</span></span> <span data-ttu-id="f0353-203">ワイルドカードとして解釈される文字はありません。</span><span class="sxs-lookup"><span data-stu-id="f0353-203">No characters are interpreted as wildcards.</span></span> <span data-ttu-id="f0353-204">パスにエスケープ文字が含まれている場合は、単一引用符で囲みます。</span><span class="sxs-lookup"><span data-stu-id="f0353-204">If the path includes escape characters, enclose it in single quotation marks.</span></span> <span data-ttu-id="f0353-205">単一引用符で囲まれた文字はエスケープシーケンスとして解釈されません。</span><span class="sxs-lookup"><span data-stu-id="f0353-205">Single quotation marks tell PowerShell not to interpret any characters as escape sequences.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases: PSPath

Required: False
Position: Named
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### <span data-ttu-id="f0353-206">-Path</span><span class="sxs-lookup"><span data-stu-id="f0353-206">-Path</span></span>

<span data-ttu-id="f0353-207">インポートする CSV ファイルのパスを指定します。</span><span class="sxs-lookup"><span data-stu-id="f0353-207">Specifies the path to the CSV file to import.</span></span>
<span data-ttu-id="f0353-208">パイプを使用してパスをにパイプすることもでき `Import-Csv` ます。</span><span class="sxs-lookup"><span data-stu-id="f0353-208">You can also pipe a path to `Import-Csv`.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases:

Required: False
Position: 0
Default value: None
Accept pipeline input: True (ByValue)
Accept wildcard characters: False
```

### <span data-ttu-id="f0353-209">-UseCulture</span><span class="sxs-lookup"><span data-stu-id="f0353-209">-UseCulture</span></span>

<span data-ttu-id="f0353-210">現在のカルチャの区切り記号を項目の区切り記号として使用します。</span><span class="sxs-lookup"><span data-stu-id="f0353-210">Uses the list separator for the current culture as the item delimiter.</span></span> <span data-ttu-id="f0353-211">カルチャのリスト区切り記号を検索するには、コマンドを使用し `(Get-Culture).TextInfo.ListSeparator` ます。</span><span class="sxs-lookup"><span data-stu-id="f0353-211">To find the list separator for a culture, use the following command: `(Get-Culture).TextInfo.ListSeparator`.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: UseCulture
Aliases:

Required: True
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="f0353-212">共通パラメーター</span><span class="sxs-lookup"><span data-stu-id="f0353-212">CommonParameters</span></span>

<span data-ttu-id="f0353-213">このコマンドレットは、一般的なパラメーターをサポートしています。-Debug、-ErrorAction、-ErrorVariable、-InformationAction、-InformationVariable、-OutVariable、-OutBuffer、-PipelineVariable、-Verbose、-WarningAction、-WarningVariable です。</span><span class="sxs-lookup"><span data-stu-id="f0353-213">This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable.</span></span> <span data-ttu-id="f0353-214">詳細については、「[about_CommonParameters](https://go.microsoft.com/fwlink/?LinkID=113216)」を参照してください。</span><span class="sxs-lookup"><span data-stu-id="f0353-214">For more information, see [about_CommonParameters](https://go.microsoft.com/fwlink/?LinkID=113216).</span></span>

## <span data-ttu-id="f0353-215">入力</span><span class="sxs-lookup"><span data-stu-id="f0353-215">INPUTS</span></span>

### <span data-ttu-id="f0353-216">System.String</span><span class="sxs-lookup"><span data-stu-id="f0353-216">System.String</span></span>

<span data-ttu-id="f0353-217">パイプを使用して、パスを含む文字列をにパイプすることができ `Import-Csv` ます。</span><span class="sxs-lookup"><span data-stu-id="f0353-217">You can pipe a string that contains a path to `Import-Csv`.</span></span>

## <span data-ttu-id="f0353-218">出力</span><span class="sxs-lookup"><span data-stu-id="f0353-218">OUTPUTS</span></span>

### <span data-ttu-id="f0353-219">Object</span><span class="sxs-lookup"><span data-stu-id="f0353-219">Object</span></span>

<span data-ttu-id="f0353-220">このコマンドレットは、CSV ファイル内のコンテンツによって記述されたオブジェクトを返します。</span><span class="sxs-lookup"><span data-stu-id="f0353-220">This cmdlet returns the objects described by the content in the CSV file.</span></span>

## <span data-ttu-id="f0353-221">注</span><span class="sxs-lookup"><span data-stu-id="f0353-221">NOTES</span></span>

<span data-ttu-id="f0353-222">インポートされたオブジェクトはオブジェクト型の CSV バージョンであるため、オブジェクト型の非 CSV バージョンを書式設定する PowerShell の型書式設定エントリによって認識および書式設定されません。</span><span class="sxs-lookup"><span data-stu-id="f0353-222">Because the imported objects are CSV versions of the object type, they are not recognized and formatted by the PowerShell type formatting entries that format the non-CSV versions of the object type.</span></span>

<span data-ttu-id="f0353-223">コマンドの結果は、 `Import-Csv` テーブルに似たカスタムオブジェクトを形成する文字列のコレクションです。</span><span class="sxs-lookup"><span data-stu-id="f0353-223">The result of an `Import-Csv` command is a collection of strings that form a table-like custom object.</span></span> <span data-ttu-id="f0353-224">各行は個別の文字列であるため、オブジェクトの **count** プロパティを使用して、テーブルの行をカウントできます。</span><span class="sxs-lookup"><span data-stu-id="f0353-224">Each row is a separate string, so you can use the **Count** property of the object to count the table rows.</span></span> <span data-ttu-id="f0353-225">列はオブジェクトのプロパティであり、行内の項目はプロパティの値です。</span><span class="sxs-lookup"><span data-stu-id="f0353-225">The columns are the properties of the object and items in the rows are the property values.</span></span>

<span data-ttu-id="f0353-226">列ヘッダー行により、列の数と列名が決定されます。</span><span class="sxs-lookup"><span data-stu-id="f0353-226">The column header row determines the number of columns and the column names.</span></span> <span data-ttu-id="f0353-227">列名は、オブジェクトのプロパティの名前でもあります。</span><span class="sxs-lookup"><span data-stu-id="f0353-227">The column names are also the names of the properties of the objects.</span></span> <span data-ttu-id="f0353-228">**ヘッダー** パラメーターを使用して列ヘッダーを指定しない限り、最初の行は列ヘッダーとして解釈されます。</span><span class="sxs-lookup"><span data-stu-id="f0353-228">The first row is interpreted to be the column headers, unless you use the **Header** parameter to specify column headers.</span></span> <span data-ttu-id="f0353-229">いずれかの行にヘッダー行よりも多くの値が含まれる場合、追加の値は無視されます。</span><span class="sxs-lookup"><span data-stu-id="f0353-229">If any row has more values than the header row, the additional values are ignored.</span></span>

<span data-ttu-id="f0353-230">列ヘッダー行に値が指定されていないか、null または空の値が含まれている場合、では、欠落している `Import-Csv` 列ヘッダーおよびプロパティ名に対して、 **H** の後に数字が使用されます。</span><span class="sxs-lookup"><span data-stu-id="f0353-230">If the column header row is missing a value or contains a null or empty value, `Import-Csv` uses **H** followed by a number for the missing column header and property name.</span></span>

<span data-ttu-id="f0353-231">CSV ファイルでは、各オブジェクトは、オブジェクトのプロパティ値のコンマ区切りリストで表されます。</span><span class="sxs-lookup"><span data-stu-id="f0353-231">In the CSV file, each object is represented by a comma-separated list of the property values of the object.</span></span> <span data-ttu-id="f0353-232">プロパティ値は、オブジェクトの **ToString ()** メソッドを使用して文字列に変換されるので、プロパティ値の名前で表されます。</span><span class="sxs-lookup"><span data-stu-id="f0353-232">The property values are converted to strings by using the **ToString()** method of the object, so they are represented by the name of the property value.</span></span> <span data-ttu-id="f0353-233">`Export-Csv` では、オブジェクトのメソッドはエクスポートされません。</span><span class="sxs-lookup"><span data-stu-id="f0353-233">`Export-Csv` does not export the methods of the object.</span></span>

## <span data-ttu-id="f0353-234">関連リンク</span><span class="sxs-lookup"><span data-stu-id="f0353-234">RELATED LINKS</span></span>

[<span data-ttu-id="f0353-235">ConvertFrom-Csv</span><span class="sxs-lookup"><span data-stu-id="f0353-235">ConvertFrom-Csv</span></span>](ConvertFrom-Csv.md)

[<span data-ttu-id="f0353-236">ConvertTo-Csv</span><span class="sxs-lookup"><span data-stu-id="f0353-236">ConvertTo-Csv</span></span>](ConvertTo-Csv.md)

[<span data-ttu-id="f0353-237">Export-Csv</span><span class="sxs-lookup"><span data-stu-id="f0353-237">Export-Csv</span></span>](Export-Csv.md)

[<span data-ttu-id="f0353-238">Get-Culture</span><span class="sxs-lookup"><span data-stu-id="f0353-238">Get-Culture</span></span>](Get-Culture.md)
