reference/7.0/Microsoft.PowerShell.Utility/Import-Csv.md
---
external help file: Microsoft.PowerShell.Commands.Utility.dll-Help.xml
keywords: powershell,コマンドレット
Locale: en-US
Module Name: Microsoft.PowerShell.Utility
ms.date: 1/8/2019
online version: https://docs.microsoft.com/powershell/module/microsoft.powershell.utility/import-csv?view=powershell-7&WT.mc_id=ps-gethelp
schema: 2.0.0
title: Import-Csv
ms.openlocfilehash: 6c738c11aaa5131cef0ad0457dc50b376152c1f0
ms.sourcegitcommit: de63e9481cf8024883060aae61fb02c59c2de662
ms.translationtype: MT
ms.contentlocale: ja-JP
ms.lasthandoff: 07/03/2020
ms.locfileid: "93210891"
---
# <span data-ttu-id="fbc35-103">Import-Csv</span><span class="sxs-lookup"><span data-stu-id="fbc35-103">Import-Csv</span></span>

## <span data-ttu-id="fbc35-104">概要</span><span class="sxs-lookup"><span data-stu-id="fbc35-104">SYNOPSIS</span></span>
<span data-ttu-id="fbc35-105">コンマ区切り値 (CSV) ファイルの項目から、テーブルに似たカスタムオブジェクトを作成します。</span><span class="sxs-lookup"><span data-stu-id="fbc35-105">Creates table-like custom objects from the items in a comma-separated value (CSV) file.</span></span>

## <span data-ttu-id="fbc35-106">SYNTAX</span><span class="sxs-lookup"><span data-stu-id="fbc35-106">SYNTAX</span></span>

### <span data-ttu-id="fbc35-107">デリミターパス (既定)</span><span class="sxs-lookup"><span data-stu-id="fbc35-107">DelimiterPath (Default)</span></span>

```
Import-Csv [[-Delimiter] <Char>] [-Path] <String[]> [-Header <String[]>] [-Encoding <Encoding>]
 [<CommonParameters>]
```

### <span data-ttu-id="fbc35-108">DelimiterLiteralPath</span><span class="sxs-lookup"><span data-stu-id="fbc35-108">DelimiterLiteralPath</span></span>

```
Import-Csv [[-Delimiter] <Char>] -LiteralPath <String[]> [-Header <String[]>] [-Encoding <Encoding>]
 [<CommonParameters>]
```

### <span data-ttu-id="fbc35-109">CulturePath</span><span class="sxs-lookup"><span data-stu-id="fbc35-109">CulturePath</span></span>

```
Import-Csv [-Path] <String[]> -UseCulture [-Header <String[]>] [-Encoding <Encoding>]
 [<CommonParameters>]
```

### <span data-ttu-id="fbc35-110">アルゴリズムの反復</span><span class="sxs-lookup"><span data-stu-id="fbc35-110">CultureLiteralPath</span></span>

```
Import-Csv -LiteralPath <String[]> -UseCulture [-Header <String[]>] [-Encoding <Encoding>]
 [<CommonParameters>]
```

## <span data-ttu-id="fbc35-111">Description</span><span class="sxs-lookup"><span data-stu-id="fbc35-111">DESCRIPTION</span></span>

<span data-ttu-id="fbc35-112">`Import-Csv`コマンドレットでは、CSV ファイルの項目からテーブルに似たカスタムオブジェクトを作成します。</span><span class="sxs-lookup"><span data-stu-id="fbc35-112">The `Import-Csv` cmdlet creates table-like custom objects from the items in CSV files.</span></span> <span data-ttu-id="fbc35-113">CSV ファイルの各列がカスタムオブジェクトのプロパティになり、行の項目がプロパティ値になります。</span><span class="sxs-lookup"><span data-stu-id="fbc35-113">Each column in the CSV file becomes a property of the custom object and the items in rows become the property values.</span></span> <span data-ttu-id="fbc35-114">`Import-Csv` コマンドレットによって生成されたファイルを含む、任意の CSV ファイルで動作 `Export-Csv` します。</span><span class="sxs-lookup"><span data-stu-id="fbc35-114">`Import-Csv` works on any CSV file, including files that are generated by the `Export-Csv` cmdlet.</span></span>

<span data-ttu-id="fbc35-115">コマンドレットのパラメーターを使用して、 `Import-Csv` 列ヘッダー行と項目区切り記号を指定したり、 `Import-Csv` 現在のカルチャの区切り記号を項目の区切り記号として使用するように指定したりできます。</span><span class="sxs-lookup"><span data-stu-id="fbc35-115">You can use the parameters of the `Import-Csv` cmdlet to specify the column header row and the item delimiter, or direct `Import-Csv` to use the list separator for the current culture as the item delimiter.</span></span>

<span data-ttu-id="fbc35-116">また、 `ConvertTo-Csv` `ConvertFrom-Csv` コマンドレットとコマンドレットを使用して、オブジェクトを CSV 文字列 (およびその逆) に変換することもできます。</span><span class="sxs-lookup"><span data-stu-id="fbc35-116">You can also use the `ConvertTo-Csv` and `ConvertFrom-Csv` cmdlets to convert objects to CSV strings (and back).</span></span> <span data-ttu-id="fbc35-117">これらのコマンドレットは、およびコマンドレットと同じですが、 `Export-CSV` `Import-Csv` ファイルを処理しない点が異なります。</span><span class="sxs-lookup"><span data-stu-id="fbc35-117">These cmdlets are the same as the `Export-CSV` and `Import-Csv` cmdlets, except that they do not deal with files.</span></span>

<span data-ttu-id="fbc35-118">CSV ファイルのヘッダー行エントリに空の値または null 値が含まれている場合は、PowerShell によって既定のヘッダー行の名前が挿入され、警告メッセージが表示されます。</span><span class="sxs-lookup"><span data-stu-id="fbc35-118">If a header row entry in a CSV file contains an empty or null value, PowerShell inserts a default header row name and displays a warning message.</span></span>

<span data-ttu-id="fbc35-119">PowerShell 6.0 以降では、 `Import-Csv` W3C 拡張ログファイル形式がサポートされるようになりました。</span><span class="sxs-lookup"><span data-stu-id="fbc35-119">Starting with PowerShell 6.0, `Import-Csv` now supports the W3C Extended Log File Format.</span></span>

## <span data-ttu-id="fbc35-120">例</span><span class="sxs-lookup"><span data-stu-id="fbc35-120">EXAMPLES</span></span>

### <span data-ttu-id="fbc35-121">例 1: プロセスオブジェクトをインポートする</span><span class="sxs-lookup"><span data-stu-id="fbc35-121">Example 1: Import process objects</span></span>

<span data-ttu-id="fbc35-122">この例では、プロセスオブジェクトの CSV ファイルをエクスポートしてインポートする方法を示します。</span><span class="sxs-lookup"><span data-stu-id="fbc35-122">This example shows how to export and then import a CSV file of process objects.</span></span>

```powershell
Get-Process | Export-Csv -Path .\Processes.csv
$P = Import-Csv -Path .\Processes.csv
$P | Get-Member
```

```Output
   TypeName: System.Management.Automation.PSCustomObject

Name                       MemberType   Definition
----                       ----------   ----------
Equals                     Method       bool Equals(System.Object obj)
GetHashCode                Method       int GetHashCode()
GetType                    Method       type GetType()
ToString                   Method       string ToString()
BasePriority               NoteProperty string BasePriority=8
Company                    NoteProperty string Company=Microsoft Corporation
...
```

```powershell
$P | Format-Table
```

```Output
Name                   SI Handles VM            WS        PM        NPM    Path
----                   -- ------- --            --        --        ---    ----
ApplicationFrameHost   4  407     2199293489152 15884288  15151104  23792  C:\WINDOWS\system32\ApplicationFrameHost.exe
...
wininit                0  157     2199112204288 4591616   1630208   10376
winlogon               4  233     2199125549056 7659520   2826240   10992  C:\WINDOWS\System32\WinLogon.exe
WinStore.App           4  846     873435136     33652736  26607616  55432  C:\Program Files\WindowsApps\Microsoft.WindowsStore_11712.1001.13.0_x64__8weky...
WmiPrvSE               0  201     2199100219392 8830976   3297280   10632  C:\WINDOWS\system32\wbem\wmiprvse.exe
WmiPrvSE               0  407     2199157727232 18509824  12922880  16624  C:\WINDOWS\system32\wbem\wmiprvse.exe
WUDFHost               0  834     2199310204928 51945472  87441408  24984  C:\Windows\System32\WUDFHost.exe
```

<span data-ttu-id="fbc35-123">`Get-Process`コマンドレットは、プロセスオブジェクトをパイプラインからに送信し `Export-Csv` ます。</span><span class="sxs-lookup"><span data-stu-id="fbc35-123">The `Get-Process` cmdlet sends process objects down the pipeline to the `Export-Csv`.</span></span> <span data-ttu-id="fbc35-124">`Export-Csv`コマンドレットは、プロセスオブジェクトを CSV 文字列に変換し、その文字列を Processes.csv ファイルに保存します。</span><span class="sxs-lookup"><span data-stu-id="fbc35-124">The `Export-Csv` cmdlet converts the process objects to CSV strings and saves the strings in the Processes.csv file.</span></span> <span data-ttu-id="fbc35-125">`Import-Csv`コマンドレットは、Processes.csv ファイルから CSV 文字列をインポートします。</span><span class="sxs-lookup"><span data-stu-id="fbc35-125">The `Import-Csv` cmdlet imports the CSV strings from the Processes.csv file.</span></span>
<span data-ttu-id="fbc35-126">文字列は変数に保存され `$P` ます。</span><span class="sxs-lookup"><span data-stu-id="fbc35-126">The strings are saved in the `$P` variable.</span></span> <span data-ttu-id="fbc35-127">変数は、インポートされた `$P` `Get-Member` CSV 文字列のプロパティを表示するコマンドレットにパイプラインから送信されます。</span><span class="sxs-lookup"><span data-stu-id="fbc35-127">The `$P` variable is sent down the pipeline to the `Get-Member` cmdlet that displays the properties of the imported CSV strings.</span></span> <span data-ttu-id="fbc35-128">`$P`変数はパイプラインの下にコマンドレットに送信され `Format-Table` 、オブジェクトが表示されます。</span><span class="sxs-lookup"><span data-stu-id="fbc35-128">The `$P` variable is sent down the pipeline to the `Format-Table` cmdlet and displays the objects.</span></span>

### <span data-ttu-id="fbc35-129">例 2: 区切り記号を指定する</span><span class="sxs-lookup"><span data-stu-id="fbc35-129">Example 2: Specify the delimiter</span></span>

<span data-ttu-id="fbc35-130">この例では、コマンドレットの **Delimiter** パラメーターを使用する方法を示し `Import-Csv` ます。</span><span class="sxs-lookup"><span data-stu-id="fbc35-130">This example shows how to use the **Delimiter** parameter of the `Import-Csv` cmdlet.</span></span>

```powershell
Get-Process | Export-Csv -Path .\Processes.csv -Delimiter :
$P = Import-Csv -Path .\Processes.csv -Delimiter :
$P | Format-Table
```

<span data-ttu-id="fbc35-131">`Get-Process`コマンドレットは、パイプラインのプロセスオブジェクトをに送信し `Export-Csv` ます。</span><span class="sxs-lookup"><span data-stu-id="fbc35-131">The `Get-Process` cmdlet sends process objects down the pipeline to `Export-Csv`.</span></span> <span data-ttu-id="fbc35-132">`Export-Csv`コマンドレットは、プロセスオブジェクトを CSV 文字列に変換し、その文字列を Processes.csv ファイルに保存します。</span><span class="sxs-lookup"><span data-stu-id="fbc35-132">The `Export-Csv` cmdlet converts the process objects to CSV strings and saves the strings in the Processes.csv file.</span></span>
<span data-ttu-id="fbc35-133">**Delimiter** パラメーターは、コロン区切り記号を指定するために使用されます。</span><span class="sxs-lookup"><span data-stu-id="fbc35-133">The **Delimiter** parameter is used to specify a colon delimiter.</span></span> <span data-ttu-id="fbc35-134">`Import-Csv`コマンドレットは、Processes.csv ファイルから CSV 文字列をインポートします。</span><span class="sxs-lookup"><span data-stu-id="fbc35-134">The `Import-Csv` cmdlet imports the CSV strings from the Processes.csv file.</span></span> <span data-ttu-id="fbc35-135">文字列は変数に保存され `$P` ます。</span><span class="sxs-lookup"><span data-stu-id="fbc35-135">The strings are saved in the `$P` variable.</span></span> <span data-ttu-id="fbc35-136">To `$P` 変数は、パイプラインを介してコマンドレットに送信され `Format-Table` ます。</span><span class="sxs-lookup"><span data-stu-id="fbc35-136">To `$P` variable is sent down the pipeline to the `Format-Table` cmdlet.</span></span>

### <span data-ttu-id="fbc35-137">例 3: 区切り記号の現在のカルチャを指定する</span><span class="sxs-lookup"><span data-stu-id="fbc35-137">Example 3: Specify the current culture for the delimiter</span></span>

<span data-ttu-id="fbc35-138">この例では、UseCulture パラメーターを指定してコマンドレットを使用する方法を示し `Import-Csv` ます。 **UseCulture**</span><span class="sxs-lookup"><span data-stu-id="fbc35-138">This example shows how to use the `Import-Csv` cmdlet with the **UseCulture** parameter.</span></span>

```powershell
(Get-Culture).TextInfo.ListSeparator
Get-Process | Export-Csv -Path .\Processes.csv -UseCulture
Import-Csv -Path .\Processes.csv -UseCulture
```

<span data-ttu-id="fbc35-139">この `Get-Culture` コマンドレットは、入れ子になったプロパティの **TextInfo** と **listseparator** を使用して、現在のカルチャの既定のリスト区切り記号を取得します。</span><span class="sxs-lookup"><span data-stu-id="fbc35-139">The `Get-Culture` cmdlet uses the nested properties **TextInfo** and **ListSeparator** to get the current culture's default list separator.</span></span> <span data-ttu-id="fbc35-140">`Get-Process`コマンドレットは、パイプラインのプロセスオブジェクトをに送信し `Export-Csv` ます。</span><span class="sxs-lookup"><span data-stu-id="fbc35-140">The `Get-Process` cmdlet sends process objects down the pipeline to `Export-Csv`.</span></span> <span data-ttu-id="fbc35-141">`Export-Csv`コマンドレットは、プロセスオブジェクトを CSV 文字列に変換し、その文字列を Processes.csv ファイルに保存します。</span><span class="sxs-lookup"><span data-stu-id="fbc35-141">The `Export-Csv` cmdlet converts the process objects to CSV strings and saves the strings in the Processes.csv file.</span></span> <span data-ttu-id="fbc35-142">**UseCulture** パラメーターは、現在のカルチャの既定のリスト区切り記号を使用します。</span><span class="sxs-lookup"><span data-stu-id="fbc35-142">The **UseCulture** parameter uses the current culture's default list separator.</span></span> <span data-ttu-id="fbc35-143">`Import-Csv`コマンドレットは、Processes.csv ファイルから CSV 文字列をインポートします。</span><span class="sxs-lookup"><span data-stu-id="fbc35-143">The `Import-Csv` cmdlet imports the CSV strings from the Processes.csv file.</span></span>

### <span data-ttu-id="fbc35-144">例 4: インポートされたオブジェクトのプロパティ名を変更する</span><span class="sxs-lookup"><span data-stu-id="fbc35-144">Example 4: Change property names in an imported object</span></span>

<span data-ttu-id="fbc35-145">この例では、の **Header** パラメーターを使用して `Import-Csv` 、結果としてインポートされるオブジェクトのプロパティの名前を変更する方法を示します。</span><span class="sxs-lookup"><span data-stu-id="fbc35-145">This example shows how to use the **Header** parameter of `Import-Csv` to change the names of properties in the resulting imported object.</span></span>

```powershell
Start-Job -ScriptBlock { Get-Process } | Export-Csv -Path .\Jobs.csv -NoTypeInformation
$Header = 'State', 'MoreData', 'StatusMessage', 'Location', 'Command', 'StateInfo', 'Finished', 'InstanceId', 'Id', 'Name', 'ChildJobs', 'BeginTime', 'EndTime', 'JobType', 'Output', 'Error', 'Progress', 'Verbose', 'Debug', 'Warning', 'Information'
# Delete the default header from file
$A = Get-Content -Path .\Jobs.csv
$A = $A[1..($A.Count - 1)]
$A | Out-File -FilePath .\Jobs.csv
$J = Import-Csv -Path .\Jobs.csv -Header $Header
$J
```

```Output
State         : Running
MoreData      : True
StatusMessage :
Location      : localhost
Command       : Get-Process
StateInfo     : Running
Finished      : System.Threading.ManualResetEvent
InstanceId    : a259eb63-6824-4b97-a033-305108ae1c2e
Id            : 1
Name          : Job1
ChildJobs     : System.Collections.Generic.List`1[System.Management.Automation.Job]
BeginTime     : 12/20/2018 18:59:57
EndTime       :
JobType       : BackgroundJob
Output        : System.Management.Automation.PSDataCollection`1[System.Management.Automation.PSObject]
Error         : System.Management.Automation.PSDataCollection`1[System.Management.Automation.ErrorRecord]
Progress      : System.Management.Automation.PSDataCollection`1[System.Management.Automation.ProgressRecord]
Verbose       : System.Management.Automation.PSDataCollection`1[System.Management.Automation.VerboseRecord]
Debug         : System.Management.Automation.PSDataCollection`1[System.Management.Automation.DebugRecord]
Warning       : System.Management.Automation.PSDataCollection`1[System.Management.Automation.WarningRecord]
Information   : System.Management.Automation.PSDataCollection`1[System.Management.Automation.InformationRecord]
```

<span data-ttu-id="fbc35-146">コマンドレットでは、 `Start-Job` 実行するバックグラウンドジョブを開始し `Get-Process` ます。</span><span class="sxs-lookup"><span data-stu-id="fbc35-146">The `Start-Job` cmdlet starts a background job that runs `Get-Process`.</span></span> <span data-ttu-id="fbc35-147">ジョブオブジェクトは、パイプラインからコマンドレットに送信され、 `Export-Csv` CSV 文字列に変換されます。</span><span class="sxs-lookup"><span data-stu-id="fbc35-147">A job object is sent down the pipeline to the `Export-Csv` cmdlet and converted to a CSV string.</span></span> <span data-ttu-id="fbc35-148">**Notypeinformation** パラメーターは、CSV 出力から型情報ヘッダーを削除し、PowerShell Core では省略可能です。</span><span class="sxs-lookup"><span data-stu-id="fbc35-148">The **NoTypeInformation** parameter removes the type information header from CSV output and is optional in PowerShell Core.</span></span>
<span data-ttu-id="fbc35-149">変数には、 `$Header` **HasPSJobTypeName data** 、 **jobstateinfo** 、 **Psbegintime** 、 **psendtime** 、および **PSJobTypeName** の既定値を置き換えるカスタムヘッダーが含まれています。</span><span class="sxs-lookup"><span data-stu-id="fbc35-149">The `$Header` variable contains a custom header that replaces the following default values: **HasMoreData** , **JobStateInfo** , **PSBeginTime** , **PSEndTime** , and **PSJobTypeName** .</span></span> <span data-ttu-id="fbc35-150">変数は、コマンドレットを使用して、 `$A` `Get-Content` Jobs.csv ファイルから CSV 文字列を取得します。</span><span class="sxs-lookup"><span data-stu-id="fbc35-150">The `$A` variable uses the `Get-Content` cmdlet to get the CSV string from the Jobs.csv file.</span></span> <span data-ttu-id="fbc35-151">変数は、 `$A` ファイルから既定のヘッダーを削除するために使用されます。</span><span class="sxs-lookup"><span data-stu-id="fbc35-151">The `$A` variable is used to remove the default header from the file.</span></span> <span data-ttu-id="fbc35-152">この `Out-File` コマンドレットは、新しいバージョンの Jobs.csv ファイルを変数に保存し `$A` ます。</span><span class="sxs-lookup"><span data-stu-id="fbc35-152">The `Out-File` cmdlet saves the new version of the Jobs.csv file in the `$A` variable.</span></span> <span data-ttu-id="fbc35-153">`Import-Csv`コマンドレットは、Jobs.csv ファイルをインポートし、 **Header** パラメーターを使用して変数を適用し `$Header` ます。</span><span class="sxs-lookup"><span data-stu-id="fbc35-153">The `Import-Csv` cmdlet imports the Jobs.csv file and uses the **Header** parameter to apply the `$Header` variable.</span></span> <span data-ttu-id="fbc35-154">変数には、インポートされた `$J` **Pscustomobject** 変数が含まれ、PowerShell コンソールにオブジェクトが表示されます。</span><span class="sxs-lookup"><span data-stu-id="fbc35-154">The `$J` variable contains the imported **PSCustomObject** and displays the object in the PowerShell console.</span></span>

### <span data-ttu-id="fbc35-155">例 5: CSV ファイルを使用してカスタムオブジェクトを作成する</span><span class="sxs-lookup"><span data-stu-id="fbc35-155">Example 5: Create a custom object using a CSV file</span></span>

<span data-ttu-id="fbc35-156">この例では、CSV ファイルを使用して PowerShell でカスタムオブジェクトを作成する方法を示します。</span><span class="sxs-lookup"><span data-stu-id="fbc35-156">This example shows how to create a custom object in PowerShell by using a CSV file.</span></span>

```powershell
Get-Content -Path .\Links.csv
```

```Output
113207,about_Aliases
113208,about_Arithmetic_Operators
113209,about_Arrays
113210,about_Assignment_Operators
113212,about_Automatic_Variables
113213,about_Break
113214,about_Command_Precedence
113215,about_Command_Syntax
144309,about_Comment_Based_Help
113216,about_CommonParameters
113217,about_Comparison_Operators
113218,about_Continue
113219,about_Core_Commands
113220,about_Data_Section
```

```powershell
$A = Import-Csv -Path .\Links.csv -Header 'LinkID', 'TopicTitle'
$A | Get-Member
```

```Output
   TypeName: System.Management.Automation.PSCustomObject

Name        MemberType   Definition
----        ----------   ----------
Equals      Method       bool Equals(System.Object obj)
GetHashCode Method       int GetHashCode()
GetType     Method       type GetType()
ToString    Method       string ToString()
LinkID      NoteProperty string LinkID=113207
TopicTitle  NoteProperty string TopicTitle=about_Aliases
```

```powershell
$A | Where-Object -Property TopicTitle -Like '*alias*'
```

```Output
LinkID TopicTitle
------ ----------
113207 about_Aliases
```

<span data-ttu-id="fbc35-157">Links.csv ファイルを作成するには、出力に示されている値を使用し `Get-Content` ます。</span><span class="sxs-lookup"><span data-stu-id="fbc35-157">To create your Links.csv file, use the values shown in the `Get-Content` output.</span></span>

<span data-ttu-id="fbc35-158">コマンドレットにより、 `Get-Content` Links.csv ファイルが表示されます。</span><span class="sxs-lookup"><span data-stu-id="fbc35-158">The `Get-Content` cmdlet displays the Links.csv file.</span></span> <span data-ttu-id="fbc35-159">この `Import-Csv` コマンドレットは、Links.csv ファイルをインポートします。</span><span class="sxs-lookup"><span data-stu-id="fbc35-159">The `Import-Csv` cmdlet imports the Links.csv file.</span></span> <span data-ttu-id="fbc35-160">**Header** パラメーターは、 **LinkId** と **トピックタイトル** のプロパティ名を指定します。</span><span class="sxs-lookup"><span data-stu-id="fbc35-160">The **Header** parameter specifies the property names **LinkId** and **TopicTitle** .</span></span> <span data-ttu-id="fbc35-161">オブジェクトは変数に格納され `$A` ます。</span><span class="sxs-lookup"><span data-stu-id="fbc35-161">The objects are stored in the `$A` variable.</span></span> <span data-ttu-id="fbc35-162">`Get-Member`コマンドレットは、 **ヘッダー** パラメーターのプロパティ名を表示します。</span><span class="sxs-lookup"><span data-stu-id="fbc35-162">The `Get-Member` cmdlet shows the property names from the **Header** parameter.</span></span> <span data-ttu-id="fbc35-163">コマンドレットでは、 `Where-Object` **エイリアス** を含む " **トピックのタイトル** " プロパティを使用してオブジェクトを選択します。</span><span class="sxs-lookup"><span data-stu-id="fbc35-163">The `Where-Object` cmdlet selects objects with the **TopicTitle** property that includes **alias** .</span></span>

### <span data-ttu-id="fbc35-164">例 6: 値が不足している CSV をインポートする</span><span class="sxs-lookup"><span data-stu-id="fbc35-164">Example 6: Import a CSV that is missing a value</span></span>

<span data-ttu-id="fbc35-165">この例は、 `Import-Csv` CSV ファイルのヘッダー行に null 値または空の値が含まれている場合に、PowerShell のコマンドレットがどのように応答するかを示しています。</span><span class="sxs-lookup"><span data-stu-id="fbc35-165">This example shows how the `Import-Csv` cmdlet in PowerShell responds when the header row in a CSV file includes a null or empty value.</span></span> <span data-ttu-id="fbc35-166">`Import-Csv` が返すオブジェクトのプロパティ名になる、欠落しているヘッダー行の既定の名前に置き換え `Import-Csv` ます。</span><span class="sxs-lookup"><span data-stu-id="fbc35-166">`Import-Csv` substitutes a default name for the missing header row that becomes the property name of the object that `Import-Csv` returns.</span></span>

```powershell
Get-Content -Path .\Projects.csv
```

```Output
ProjectID,ProjectName,,Completed
13,Inventory,Redmond,True
440,,FarEast,True
469,Marketing,Europe,False
```

```powershell
Import-Csv -Path .\Projects.csv
```

```Output
WARNING: One or more headers were not specified. Default names starting with "H" have been used in place of any missing headers.

ProjectID ProjectName H1      Completed
--------- ----------- --      ---------
13        Inventory   Redmond True
440                   FarEast True
469       Marketing   Europe  False
```

```powershell
(Import-Csv -Path .\Projects.csv).H1
```

```Output
WARNING: One or more headers were not specified. Default names starting with "H" have been used in place of any missing headers.
Redmond
FarEast
Europe
```

<span data-ttu-id="fbc35-167">Projects.csv ファイルを作成するには、例の出力に示されている値を使用し `Get-Content` ます。</span><span class="sxs-lookup"><span data-stu-id="fbc35-167">To create your Projects.csv file, use the values shown in the example's `Get-Content` output.</span></span>

<span data-ttu-id="fbc35-168">コマンドレットにより、 `Get-Content` Projects.csv ファイルが表示されます。</span><span class="sxs-lookup"><span data-stu-id="fbc35-168">The `Get-Content` cmdlet displays the Projects.csv file.</span></span> <span data-ttu-id="fbc35-169">ヘッダー行の **ProjectName** と **Completed** の間に値がありません。</span><span class="sxs-lookup"><span data-stu-id="fbc35-169">The header row is missing a value between **ProjectName** and **Completed** .</span></span> <span data-ttu-id="fbc35-170">この `Import-Csv` コマンドレットは、Projects.csv ファイルをインポートし、 **H1** が既定のヘッダー名であるため、警告メッセージを表示します。</span><span class="sxs-lookup"><span data-stu-id="fbc35-170">The `Import-Csv` cmdlet imports the Projects.csv file and displays a warning message because **H1** is a default header name.</span></span> <span data-ttu-id="fbc35-171">この `(Import-Csv -Path
.\Projects.csv).H1` コマンドは、 **H1** プロパティ値を取得し、警告を表示します。</span><span class="sxs-lookup"><span data-stu-id="fbc35-171">The `(Import-Csv -Path
.\Projects.csv).H1` command gets the **H1** property values and displays a warning.</span></span>

## <span data-ttu-id="fbc35-172">PARAMETERS</span><span class="sxs-lookup"><span data-stu-id="fbc35-172">PARAMETERS</span></span>

### <span data-ttu-id="fbc35-173">-区切り記号</span><span class="sxs-lookup"><span data-stu-id="fbc35-173">-Delimiter</span></span>

<span data-ttu-id="fbc35-174">CSV ファイル内のプロパティ値を区切る区切り記号を指定します。</span><span class="sxs-lookup"><span data-stu-id="fbc35-174">Specifies the delimiter that separates the property values in the CSV file.</span></span>
<span data-ttu-id="fbc35-175">既定値はコンマ (,) です。</span><span class="sxs-lookup"><span data-stu-id="fbc35-175">The default is a comma (,).</span></span>

<span data-ttu-id="fbc35-176">コロン (:) などの文字を入力します。</span><span class="sxs-lookup"><span data-stu-id="fbc35-176">Enter a character, such as a colon (:).</span></span>
<span data-ttu-id="fbc35-177">セミコロン (;) を指定するには単一引用符で囲みます。</span><span class="sxs-lookup"><span data-stu-id="fbc35-177">To specify a semicolon (;) enclose it in single quotation marks.</span></span>

<span data-ttu-id="fbc35-178">ファイルに実際の文字列区切り記号以外の文字を指定すると、は `Import-Csv` csv 文字列からオブジェクトを作成できず、csv 文字列が返されます。</span><span class="sxs-lookup"><span data-stu-id="fbc35-178">If you specify a character other than the actual string delimiter in the file, `Import-Csv` cannot create the objects from the CSV strings and will return the CSV strings.</span></span>

```yaml
Type: System.Char
Parameter Sets: DelimiterPath, DelimiterLiteralPath
Aliases:

Required: False
Position: 1
Default value: comma (,)
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="fbc35-179">-Encoding</span><span class="sxs-lookup"><span data-stu-id="fbc35-179">-Encoding</span></span>

<span data-ttu-id="fbc35-180">インポートされた CSV ファイルのエンコードを指定します。</span><span class="sxs-lookup"><span data-stu-id="fbc35-180">Specifies the encoding for the imported CSV file.</span></span> <span data-ttu-id="fbc35-181">既定値は `utf8NoBOM` です。</span><span class="sxs-lookup"><span data-stu-id="fbc35-181">The default value is `utf8NoBOM`.</span></span>

<span data-ttu-id="fbc35-182">このパラメーターに指定できる値は次のとおりです。</span><span class="sxs-lookup"><span data-stu-id="fbc35-182">The acceptable values for this parameter are as follows:</span></span>

- <span data-ttu-id="fbc35-183">`ascii`: ASCII (7 ビット) 文字セットのエンコーディングを使用します。</span><span class="sxs-lookup"><span data-stu-id="fbc35-183">`ascii`: Uses the encoding for the ASCII (7-bit) character set.</span></span>
- <span data-ttu-id="fbc35-184">`bigendianunicode`: ビッグエンディアンのバイト順を使用して UTF-16 形式でエンコードします。</span><span class="sxs-lookup"><span data-stu-id="fbc35-184">`bigendianunicode`: Encodes in UTF-16 format using the big-endian byte order.</span></span>
- <span data-ttu-id="fbc35-185">`oem`: MS-DOS およびコンソールプログラムの既定のエンコードを使用します。</span><span class="sxs-lookup"><span data-stu-id="fbc35-185">`oem`: Uses the default encoding for MS-DOS and console programs.</span></span>
- <span data-ttu-id="fbc35-186">`unicode`: リトルエンディアンのバイト順を使用して UTF-16 形式でエンコードします。</span><span class="sxs-lookup"><span data-stu-id="fbc35-186">`unicode`: Encodes in UTF-16 format using the little-endian byte order.</span></span>
- <span data-ttu-id="fbc35-187">`utf7`: UTF-7 形式でエンコードします。</span><span class="sxs-lookup"><span data-stu-id="fbc35-187">`utf7`: Encodes in UTF-7 format.</span></span>
- <span data-ttu-id="fbc35-188">`utf8`: UTF-8 形式でエンコードします。</span><span class="sxs-lookup"><span data-stu-id="fbc35-188">`utf8`: Encodes in UTF-8 format.</span></span>
- <span data-ttu-id="fbc35-189">`utf8BOM`: バイト順マーク (BOM) を使用して UTF-8 形式でエンコードします。</span><span class="sxs-lookup"><span data-stu-id="fbc35-189">`utf8BOM`: Encodes in UTF-8 format with Byte Order Mark (BOM)</span></span>
- <span data-ttu-id="fbc35-190">`utf8NoBOM`: バイトオーダーマーク (BOM) を使用せずに UTF-8 形式でエンコードします。</span><span class="sxs-lookup"><span data-stu-id="fbc35-190">`utf8NoBOM`: Encodes in UTF-8 format without Byte Order Mark (BOM)</span></span>
- <span data-ttu-id="fbc35-191">`utf32`:32 UTF-8 形式でエンコードします。</span><span class="sxs-lookup"><span data-stu-id="fbc35-191">`utf32`: Encodes in UTF-32 format.</span></span>

<span data-ttu-id="fbc35-192">PowerShell 6.2 以降では、 **Encoding** パラメーターを使用して、登録されているコードページの数値 id (など) `-Encoding 1251` や、登録されているコードページの文字列名 (など) を使用することもでき `-Encoding "windows-1251"` ます。</span><span class="sxs-lookup"><span data-stu-id="fbc35-192">Beginning with PowerShell 6.2, the **Encoding** parameter also allows numeric IDs of registered code pages (like `-Encoding 1251`) or string names of registered code pages (like `-Encoding "windows-1251"`).</span></span> <span data-ttu-id="fbc35-193">詳細については、 [コードページ](/dotnet/api/system.text.encoding.codepage?view=netcore-2.2)の .net ドキュメントを参照してください。</span><span class="sxs-lookup"><span data-stu-id="fbc35-193">For more information, see the .NET documentation for [Encoding.CodePage](/dotnet/api/system.text.encoding.codepage?view=netcore-2.2).</span></span>

```yaml
Type: System.Text.Encoding
Parameter Sets: (All)
Aliases:
Accepted values: ASCII, BigEndianUnicode, OEM, Unicode, UTF7, UTF8, UTF8BOM, UTF8NoBOM, UTF32

Required: False
Position: Named
Default value: UTF8NoBOM
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="fbc35-194">-ヘッダー</span><span class="sxs-lookup"><span data-stu-id="fbc35-194">-Header</span></span>

<span data-ttu-id="fbc35-195">インポートされたファイルの代替列ヘッダー行を指定します。</span><span class="sxs-lookup"><span data-stu-id="fbc35-195">Specifies an alternate column header row for the imported file.</span></span> <span data-ttu-id="fbc35-196">列ヘッダーは、によって作成されるオブジェクトのプロパティ名を決定し `Import-Csv` ます。</span><span class="sxs-lookup"><span data-stu-id="fbc35-196">The column header determines the property names of the objects created by `Import-Csv`.</span></span>

<span data-ttu-id="fbc35-197">列ヘッダーをコンマ区切りのリストとして入力します。</span><span class="sxs-lookup"><span data-stu-id="fbc35-197">Enter column headers as a comma-separated list.</span></span> <span data-ttu-id="fbc35-198">ヘッダー文字列は引用符で囲まないでください。</span><span class="sxs-lookup"><span data-stu-id="fbc35-198">Do not enclose the header string in quotation marks.</span></span> <span data-ttu-id="fbc35-199">各列ヘッダーを単一引用符で囲みます。</span><span class="sxs-lookup"><span data-stu-id="fbc35-199">Enclose each column header in single quotation marks.</span></span>

<span data-ttu-id="fbc35-200">入力した列ヘッダーの数がデータ列の数を下回る場合は、残りのデータ列は破棄されます。</span><span class="sxs-lookup"><span data-stu-id="fbc35-200">If you enter fewer column headers than there are data columns, the remaining data columns are discarded.</span></span> <span data-ttu-id="fbc35-201">データ列よりも多くの列ヘッダーを入力すると、追加の列ヘッダーが空のデータ列で作成されます。</span><span class="sxs-lookup"><span data-stu-id="fbc35-201">If you enter more column headers than there are data columns, the additional column headers are created with empty data columns.</span></span>

<span data-ttu-id="fbc35-202">**Header** パラメーターを使用する場合は、CSV ファイルから元のヘッダー行を削除します。</span><span class="sxs-lookup"><span data-stu-id="fbc35-202">When using the **Header** parameter, delete the original header row from the CSV file.</span></span> <span data-ttu-id="fbc35-203">それ以外の場合は、 `Import-Csv` ヘッダー行の項目から余分なオブジェクトを作成します。</span><span class="sxs-lookup"><span data-stu-id="fbc35-203">Otherwise, `Import-Csv` creates an extra object from the items in the header row.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="fbc35-204">-LiteralPath</span><span class="sxs-lookup"><span data-stu-id="fbc35-204">-LiteralPath</span></span>

<span data-ttu-id="fbc35-205">インポートする CSV ファイルのパスを指定します。</span><span class="sxs-lookup"><span data-stu-id="fbc35-205">Specifies the path to the CSV file to import.</span></span> <span data-ttu-id="fbc35-206">**Path** と異なり、 **LiteralPath** パラメーターの値は入力したとおりに使用されます。</span><span class="sxs-lookup"><span data-stu-id="fbc35-206">Unlike **Path** , the value of the **LiteralPath** parameter is used exactly as it is typed.</span></span> <span data-ttu-id="fbc35-207">ワイルドカードとして解釈される文字はありません。</span><span class="sxs-lookup"><span data-stu-id="fbc35-207">No characters are interpreted as wildcards.</span></span> <span data-ttu-id="fbc35-208">パスにエスケープ文字が含まれている場合は、単一引用符で囲みます。</span><span class="sxs-lookup"><span data-stu-id="fbc35-208">If the path includes escape characters, enclose it in single quotation marks.</span></span> <span data-ttu-id="fbc35-209">単一引用符で囲まれた文字はエスケープシーケンスとして解釈されません。</span><span class="sxs-lookup"><span data-stu-id="fbc35-209">Single quotation marks tell PowerShell not to interpret any characters as escape sequences.</span></span>

```yaml
Type: System.String[]
Parameter Sets: DelimiterLiteralPath, CultureLiteralPath
Aliases: PSPath, LP

Required: True
Position: Named
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### <span data-ttu-id="fbc35-210">-Path</span><span class="sxs-lookup"><span data-stu-id="fbc35-210">-Path</span></span>

<span data-ttu-id="fbc35-211">インポートする CSV ファイルのパスを指定します。</span><span class="sxs-lookup"><span data-stu-id="fbc35-211">Specifies the path to the CSV file to import.</span></span>
<span data-ttu-id="fbc35-212">パイプを使用してパスをにパイプすることもでき `Import-Csv` ます。</span><span class="sxs-lookup"><span data-stu-id="fbc35-212">You can also pipe a path to `Import-Csv`.</span></span>

```yaml
Type: System.String[]
Parameter Sets: DelimiterPath, CulturePath
Aliases:

Required: True
Position: 0
Default value: None
Accept pipeline input: True (ByPropertyName, ByValue)
Accept wildcard characters: False
```

### <span data-ttu-id="fbc35-213">-UseCulture</span><span class="sxs-lookup"><span data-stu-id="fbc35-213">-UseCulture</span></span>

<span data-ttu-id="fbc35-214">現在のカルチャの区切り記号を項目の区切り記号として使用します。</span><span class="sxs-lookup"><span data-stu-id="fbc35-214">Uses the list separator for the current culture as the item delimiter.</span></span> <span data-ttu-id="fbc35-215">カルチャのリスト区切り記号を検索するには、コマンドを使用し `(Get-Culture).TextInfo.ListSeparator` ます。</span><span class="sxs-lookup"><span data-stu-id="fbc35-215">To find the list separator for a culture, use the following command: `(Get-Culture).TextInfo.ListSeparator`.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: CulturePath, CultureLiteralPath
Aliases:

Required: True
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="fbc35-216">共通パラメーター</span><span class="sxs-lookup"><span data-stu-id="fbc35-216">CommonParameters</span></span>

<span data-ttu-id="fbc35-217">このコマンドレットは、一般的なパラメーターをサポートしています。-Debug、-ErrorAction、-ErrorVariable、-InformationAction、-InformationVariable、-OutVariable、-OutBuffer、-PipelineVariable、-Verbose、-WarningAction、-WarningVariable です。</span><span class="sxs-lookup"><span data-stu-id="fbc35-217">This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable.</span></span> <span data-ttu-id="fbc35-218">詳細については、「[about_CommonParameters](https://go.microsoft.com/fwlink/?LinkID=113216)」を参照してください。</span><span class="sxs-lookup"><span data-stu-id="fbc35-218">For more information, see [about_CommonParameters](https://go.microsoft.com/fwlink/?LinkID=113216).</span></span>

## <span data-ttu-id="fbc35-219">入力</span><span class="sxs-lookup"><span data-stu-id="fbc35-219">INPUTS</span></span>

### <span data-ttu-id="fbc35-220">System.String</span><span class="sxs-lookup"><span data-stu-id="fbc35-220">System.String</span></span>

<span data-ttu-id="fbc35-221">パイプを使用して、パスを含む文字列をにパイプすることができ `Import-Csv` ます。</span><span class="sxs-lookup"><span data-stu-id="fbc35-221">You can pipe a string that contains a path to `Import-Csv`.</span></span>

## <span data-ttu-id="fbc35-222">出力</span><span class="sxs-lookup"><span data-stu-id="fbc35-222">OUTPUTS</span></span>

### <span data-ttu-id="fbc35-223">Object</span><span class="sxs-lookup"><span data-stu-id="fbc35-223">Object</span></span>

<span data-ttu-id="fbc35-224">このコマンドレットは、CSV ファイル内のコンテンツによって記述されたオブジェクトを返します。</span><span class="sxs-lookup"><span data-stu-id="fbc35-224">This cmdlet returns the objects described by the content in the CSV file.</span></span>

## <span data-ttu-id="fbc35-225">注</span><span class="sxs-lookup"><span data-stu-id="fbc35-225">NOTES</span></span>

<span data-ttu-id="fbc35-226">インポートされたオブジェクトはオブジェクト型の CSV バージョンであるため、オブジェクト型の非 CSV バージョンを書式設定する PowerShell の型書式設定エントリによって認識および書式設定されません。</span><span class="sxs-lookup"><span data-stu-id="fbc35-226">Because the imported objects are CSV versions of the object type, they are not recognized and formatted by the PowerShell type formatting entries that format the non-CSV versions of the object type.</span></span>

<span data-ttu-id="fbc35-227">コマンドの結果は、 `Import-Csv` テーブルに似たカスタムオブジェクトを形成する文字列のコレクションです。</span><span class="sxs-lookup"><span data-stu-id="fbc35-227">The result of an `Import-Csv` command is a collection of strings that form a table-like custom object.</span></span> <span data-ttu-id="fbc35-228">各行は個別の文字列であるため、オブジェクトの **count** プロパティを使用して、テーブルの行をカウントできます。</span><span class="sxs-lookup"><span data-stu-id="fbc35-228">Each row is a separate string, so you can use the **Count** property of the object to count the table rows.</span></span> <span data-ttu-id="fbc35-229">列はオブジェクトのプロパティであり、行内の項目はプロパティの値です。</span><span class="sxs-lookup"><span data-stu-id="fbc35-229">The columns are the properties of the object and items in the rows are the property values.</span></span>

<span data-ttu-id="fbc35-230">列ヘッダー行により、列の数と列名が決定されます。</span><span class="sxs-lookup"><span data-stu-id="fbc35-230">The column header row determines the number of columns and the column names.</span></span> <span data-ttu-id="fbc35-231">列名は、オブジェクトのプロパティの名前でもあります。</span><span class="sxs-lookup"><span data-stu-id="fbc35-231">The column names are also the names of the properties of the objects.</span></span> <span data-ttu-id="fbc35-232">**ヘッダー** パラメーターを使用して列ヘッダーを指定しない限り、最初の行は列ヘッダーとして解釈されます。</span><span class="sxs-lookup"><span data-stu-id="fbc35-232">The first row is interpreted to be the column headers, unless you use the **Header** parameter to specify column headers.</span></span> <span data-ttu-id="fbc35-233">いずれかの行にヘッダー行よりも多くの値が含まれる場合、追加の値は無視されます。</span><span class="sxs-lookup"><span data-stu-id="fbc35-233">If any row has more values than the header row, the additional values are ignored.</span></span>

<span data-ttu-id="fbc35-234">列ヘッダー行に値が指定されていないか、null または空の値が含まれている場合、では、欠落している `Import-Csv` 列ヘッダーおよびプロパティ名に対して、 **H** の後に数字が使用されます。</span><span class="sxs-lookup"><span data-stu-id="fbc35-234">If the column header row is missing a value or contains a null or empty value, `Import-Csv` uses **H** followed by a number for the missing column header and property name.</span></span>

<span data-ttu-id="fbc35-235">CSV ファイルでは、各オブジェクトは、オブジェクトのプロパティ値のコンマ区切りリストで表されます。</span><span class="sxs-lookup"><span data-stu-id="fbc35-235">In the CSV file, each object is represented by a comma-separated list of the property values of the object.</span></span> <span data-ttu-id="fbc35-236">プロパティ値は、オブジェクトの **ToString ()** メソッドを使用して文字列に変換されるので、プロパティ値の名前で表されます。</span><span class="sxs-lookup"><span data-stu-id="fbc35-236">The property values are converted to strings by using the **ToString()** method of the object, so they are represented by the name of the property value.</span></span> <span data-ttu-id="fbc35-237">`Export-Csv` では、オブジェクトのメソッドはエクスポートされません。</span><span class="sxs-lookup"><span data-stu-id="fbc35-237">`Export-Csv` does not export the methods of the object.</span></span>

<span data-ttu-id="fbc35-238">`Import-Csv` では、W3C 拡張ログ形式もサポートされています。</span><span class="sxs-lookup"><span data-stu-id="fbc35-238">`Import-Csv` also supports the W3C Extended Log format.</span></span> <span data-ttu-id="fbc35-239">で始まる行 `#` はコメントとして扱われ、コメントがで始まる場合 `#Fields:` や、区切られた列名の一覧が含まれている場合を除き、無視されます。</span><span class="sxs-lookup"><span data-stu-id="fbc35-239">Lines starting with `#` are treated as comments and ignored unless the comment starts with `#Fields:` and contains delimited list of column names.</span></span> <span data-ttu-id="fbc35-240">この場合、コマンドレットはこれらの列名を使用します。</span><span class="sxs-lookup"><span data-stu-id="fbc35-240">In that case, the cmdlet uses those column names.</span></span> <span data-ttu-id="fbc35-241">これは、Windows IIS およびその他の web サーバーログの標準形式です。</span><span class="sxs-lookup"><span data-stu-id="fbc35-241">This is the standard format for Windows IIS and other web server logs.</span></span> <span data-ttu-id="fbc35-242">詳細については、「 [拡張ログファイルの形式](https://www.w3.org/TR/WD-logfile.html)」を参照してください。</span><span class="sxs-lookup"><span data-stu-id="fbc35-242">For more information, see [Extended Log File Format](https://www.w3.org/TR/WD-logfile.html).</span></span>

## <span data-ttu-id="fbc35-243">関連リンク</span><span class="sxs-lookup"><span data-stu-id="fbc35-243">RELATED LINKS</span></span>

[<span data-ttu-id="fbc35-244">ConvertFrom-Csv</span><span class="sxs-lookup"><span data-stu-id="fbc35-244">ConvertFrom-Csv</span></span>](ConvertFrom-Csv.md)

[<span data-ttu-id="fbc35-245">ConvertTo-Csv</span><span class="sxs-lookup"><span data-stu-id="fbc35-245">ConvertTo-Csv</span></span>](ConvertTo-Csv.md)

[<span data-ttu-id="fbc35-246">Export-Csv</span><span class="sxs-lookup"><span data-stu-id="fbc35-246">Export-Csv</span></span>](Export-Csv.md)

[<span data-ttu-id="fbc35-247">Get-Culture</span><span class="sxs-lookup"><span data-stu-id="fbc35-247">Get-Culture</span></span>](Get-Culture.md)
